update streaming rest
